--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Gravel Tour Alcarria">
     <meta property="og:description" content="Gravel Tour Alcarria es un recorrido circular que atraviesa pueblos de la comarca con mucha relevancia cómo son Trillo, Cifuentes, Brihuega, Sacedón , Pareja entre otros , y dónde Camilo José Cela se inspiró para escribir su gran novela reconocida a nivel mundial como es “VIAJE A LA ALCARRIA”">
-    <meta property="og:image" content="https://opengraph.b-cdn.net/production/images/442db057-a525-4da0-a25a-b9cba3ccb321.png?token=nrOGfJtQn5dryfMAOnJJ4k07PyAw5zvRHRC93BLcj1M&height=630&width=1200&expires=33263163733">
+    <meta property="og:image" content="https://graveltouralcarria.com/images/og_gravel-tour-alcarria-2024.png">
+    <meta property="og:logo" content="https://graveltouralcarria.com/images/gravel-tour-alcarria.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -38,7 +39,7 @@
     <meta property="twitter:url" content="https://graveltouralcarria.com">
     <meta name="twitter:title" content="Gravel Tour Alcarria">
     <meta name="twitter:description" content="Gravel Tour Alcarria es un recorrido circular que atraviesa pueblos de la comarca con mucha relevancia cómo son Trillo, Cifuentes, Brihuega, Sacedón , Pareja entre otros , y dónde Camilo José Cela se inspiró para escribir su gran novela reconocida a nivel mundial como es “VIAJE A LA ALCARRIA”">
-    <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/442db057-a525-4da0-a25a-b9cba3ccb321.png?token=nrOGfJtQn5dryfMAOnJJ4k07PyAw5zvRHRC93BLcj1M&height=630&width=1200&expires=33263163733">
+    <meta name="twitter:image" content="https://graveltouralcarria.com/images/og_gravel-tour-alcarria-2024.png">
 </head>
 
 <body>
