--- a/index.html
+++ b/index.html
@@ -295,20 +295,20 @@ Una pequeña degustación gastronómica típica de la zona.</p>
                 <div class="row row-cols-1 row-cols-lg-4">
                     <div class="col col-lg-4">
                         <div class="d-flex flex-column text-center p-4 gap-3">
-                            <h1 class="font-1 fw-bold m-0 lh-1 accent-color">167 km</h1>
-                            <p class="font-1 fs-4 fw-bold text-gray">Distancia Total</p>
+                            <h2 class="font-1 fw-bold accent-color">167 km</h2>
+                            <span class="font-1 fs-4 fw-bold text-gray">Distancia Total</span>
                         </div>
                     </div>
                     <div class="col col-lg-4">
                         <div class="d-flex flex-column text-center p-4 gap-3">
-                            <h1 class="font-1 fw-bold m-0 lh-1 accent-color">2500 m</h1>
-                            <p class="font-1 fs-4 fw-bold text-gray">Desnivel positivo</p>
+                            <h2 class="font-1 fw-bold accent-color">2500 m</h2>
+                            <span class="font-1 fs-4 fw-bold text-gray">Desnivel positivo</span>
                         </div>
                     </div>
                     <div class="col col-lg-4">
                         <div class="d-flex flex-column text-center p-4 gap-3">
-                            <h1 class="font-1 fw-bold m-0 lh-1 accent-color">12 horas</h1>
-                            <p class="font-1 fs-4 fw-bold text-gray">Tiempo máximo de prueba</p>
+                            <h2 class="font-1 fw-bold accent-color">12 horas</h2>
+                            <span class="font-1 fs-4 fw-bold text-gray">Tiempo máximo de prueba</span>
                         </div>
                     </div>
                 </div>
