--- a/index.html
+++ b/index.html
@@ -388,11 +388,9 @@ Una pequeña degustación gastronómica típica de la zona.</p>
     <footer>
         
 
-        <section class="section position-relative text-white"
-            style="background-image: url(images/dummy-img-1920x900.jpg);" >
-            <div class="image-overlay"></div>
+        <section class="section position-relative text-white">
             <div class="r-container position-relative" style="z-index: 2;">
-                <div class="d-flex flex-column gap-4 align-items-center justify-content-center text-center">
+                <div class="d-flex flex-column align-items-center justify-content-center text-center">
                     <!-- <h5 class="accent-color fw-normal lh-1 font-2 fs-4 m-0">¿Qué incluye?                    </h5>
                     <h2 class="font-1 fw-bold m-0 lh-1">Inscripciones</h2>
                     <div class="divider m-0 accent-color mx-auto">
@@ -425,12 +423,7 @@ Una pequeña degustación gastronómica típica de la zona.</p>
                         </div>
                     </div> -->
                     <div class="social-container">
-                        <a type="button" href="#" class="social-item">
-                            <i class="fa-brands fa-facebook"></i>
-                        </a>
-                        <a type="button" href="#" class="social-item">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
+                        <img src="images/zona-zentro.png" alt="Logotipo Zona Zentro" width="180" />
                     </div>
                 </div>
             </div>
