--- a/index.html
+++ b/index.html
@@ -143,12 +143,15 @@
                                 <i class="fa-solid fa-circle-chevron-down"></i>
                             </div>
                             <p>
-                                La credencia que os entregaremos será un aspecto clave de la experiencia. Cada punto de sellado incluirá:
-Información breve sobre el pueblo
-Una pequeña degustación gastronómica típica de la zona.</p>
+                                La credencial que os entregaremos será un aspecto clave de la experiencia. Cada punto de sellado incluirá:</p>
+<ul>
+    <li><b>·</b> Información breve sobre el pueblo</li>
+    <li><b>·</b> Una pequeña degustación gastronómica típica de la zona</li>
+</ul>
+
 <p><strong>Al completar el recorrido con la credencial completamente sellada, los ciclistas recibirán:</strong></p>
 <ul>
-    <li><i class="fa-solid fa-clipboard-check"></i> Camiseta personalizada EstelVelo</li>
+    <li><i class="fa-solid fa-clipboard-check"></i> Camiseta personalizada Stelvelo</li>
     <li><i class="fa-solid fa-clipboard-check"></i> Medalla Conmemorativa</li>
     <li><i class="fa-solid fa-clipboard-check"></i> Diploma personalizado acreditando la finalización del evento</li>
 </ul>
@@ -329,13 +332,15 @@ Una pequeña degustación gastronómica típica de la zona.</p>
                             <div class="d-flex flex-column gap-3">
                                 <h5 class="accent-color fw-normal font-2 fs-4"><i>¿Qué incluye?</i></h5>
                                 <h2 class="font-1 fw-bold">Inscripciones</h2>
+                                <p>Límite de inscripciones <strong>80 participantes</strong></p>
+                                <p>Inscripciones a partir del <b>Miércoles 02 de Octubre</b></p>
                                 <div class="divider accent-color">
                                     <i class="fa-solid fa-circle-chevron-down"></i>
                                 </div>
                                 <ul>
-                                    <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Camiseta edición limitada Stelvello</li>
+                                    <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Camiseta edición limitada Stelvelo</li>
                                     <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Seguro de viaje</li>
-                                    <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Credencial (libro seelado)</li>
+                                    <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Credencial (Libro de sellado)</li>
                                     <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Medalla</li>
                                     <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Avituallamientos gastronómicos en cada pueblo</li>
                                     <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Fiesta despedida Gravel Tour Alcarria</li>
@@ -423,7 +428,8 @@ Una pequeña degustación gastronómica típica de la zona.</p>
                         </div>
                     </div> -->
                     <div class="social-container">
-                        <img src="images/zona-zentro.png" alt="Logotipo Zona Zentro" width="180" />
+                        <img src="images/zona-zentro.png" alt="Logotipo Zona Zentro" width="160" />
+                        <img src="images/stelvelo.png" alt="Logotipo Stelve" width="120" />
                     </div>
                 </div>
             </div>
