--- a/index.html
+++ b/index.html
@@ -332,8 +332,7 @@
                             <div class="d-flex flex-column gap-3">
                                 <h5 class="accent-color fw-normal font-2 fs-4"><i>¿Qué incluye?</i></h5>
                                 <h2 class="font-1 fw-bold">Inscripciones</h2>
-                                <p>Límite de inscripciones <strong>80 participantes</strong></p>
-                                <p>Inscripciones a partir del <b>Miércoles 02 de Octubre</b></p>
+                                <p class="accent-color">Límite de inscripciones <strong>80 participantes</strong><br>Inscripciones a partir del <b>Miércoles 02 de Octubre</b></p>
                                 <div class="divider accent-color">
                                     <i class="fa-solid fa-circle-chevron-down"></i>
                                 </div>
