--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <a class="nav-link" aria-current="page" href="#recorrido">Recorrido</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#inscripciones">Inscripciones</a>
+                                <a class="nav-link" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">Inscripciones</a>
                             </li>
                             <li class="nav-item"></li>
                                 <a class="nav-link" aria-current="page" href="#reglamento">Reglamento</a>
