--- a/index.html
+++ b/index.html
@@ -344,8 +344,7 @@
                                     <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Avituallamientos gastronómicos en cada pueblo</li>
                                     <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Fiesta despedida Gravel Tour Alcarria</li>
                                 </ul>
-<br />
-<a class="nav-link" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRIBETE AQUÍ</a>
+<a class="accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRIBETE AQUÍ</a>
                             </div>
                         </div>
                     </div>
