--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#inscripciones">Inscripciones</a>
                             </li>
-                            <li class="nav-item"></li>
+                            <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#reglamento">Reglamento</a>
                             </li>
+<li><a class="nav-link accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRIBETE AQUÍ</a></li>
                         </ul>
                     </div>
                 </div>
