--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#reglamento">Reglamento</a>
                             </li>
-<li><a class="nav-link accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRIBETE AQUÍ</a></li>
+<li><a class="nav-link accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRÍBETE AQUÍ</a></li>
                         </ul>
                     </div>
                 </div>
@@ -345,7 +345,7 @@
                                     <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Avituallamientos gastronómicos en cada pueblo</li>
                                     <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Fiesta despedida Gravel Tour Alcarria</li>
                                 </ul>
-<a class="accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRIBETE AQUÍ</a>
+<a class="accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRÍBETE AQUÍ</a>
                             </div>
                         </div>
                     </div>
