--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-lg-3 p-lg-0 p-4 gap-2">
-                            <li class="nav-item"></li>
+                            <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#horarios">Fecha y Horarios</a>
                             </li>
-                            <li class="nav-item"></li>
+                            <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#recorrido">Recorrido</a>
                             </li>
                             <li class="nav-item">
@@ -79,7 +79,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#reglamento">Reglamento</a>
                             </li>
-<li><a class="nav-link accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRÍBETE AQUÍ</a></li>
+                            <li class="nav-item">
+                                <a class="nav-link accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRÍBETE AQUÍ</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
