--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                     <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Avituallamientos gastronómicos en cada pueblo</li>
                                     <li><i class="fa-solid fa-clipboard-check accent-color-2"></i> Fiesta despedida Gravel Tour Alcarria</li>
                                 </ul>
-<a class="accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRÍBETE AQUÍ</a>
+                                <a class="font-1 accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRÍBETE AQUÍ</a>
                             </div>
                         </div>
                     </div>
