Updating copies and gitignore

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                     <i class="fa-solid fa-circle-chevron-down"></i>
                                 </div>
                                 <p><b>Gravel Tour Alcarria</b> es un recorrido circular que atraviesa pueblos de la comarca con mucha relevancia cómo son Trillo, Cifuentes, Brihuega, Sacedón , Pareja entre otros , y dónde Camilo José Cela se inspiró para escribir su gran novela reconocida a nivel mundial como es “VIAJE A LA ALCARRIA” 
-                                    170 Km . de caminos naturales, algún tramo de carreteras locales y pistas donde podrás rodar con tu bicicleta de gravel, mtb y e-bike. 
+                                    175 km de caminos naturales, algún tramo de carreteras locales y pistas donde podrás rodar con tu bicicleta de gravel, mtb y e-bike. 
                                     Gravel Tour Alcarria no es solo una ruta ciclista, sino una experiencia única que une deporte, literatura y cultura. A través de sus paisajes cambiantes, pistas y caminos los ciclistas vivirán un recorrido lleno de historia, naturaleza y tradición, descubriendo la esencia de una tierra que, en palabras de Cela, “regala a quien la camina un trozo de su alma”
                                     </p>
                             </div>
@@ -267,7 +267,7 @@
                                 <i class="fa-solid fa-location-dot accent-color-2"></i> 
                                 <strong class="accent-color-2">6. Retorno a Trillo: El final del viaje
                                 </strong> 
-                                <br>Finalmente, tras 167 km de aventura, los ciclistas regresan a Trillo, cerrando el círculo de este viaje literario y deportivo. Como Cela, habrán descubierto que la Alcarria es una tierra que no ofrece grandiosidades, pero sí una belleza humilde y auténtica, que se revela a quienes se atreven a recorrer sus caminos.
+                                <br>Finalmente, tras 175 km de aventura, los ciclistas regresan a Trillo, cerrando el círculo de este viaje literario y deportivo. Como Cela, habrán descubierto que la Alcarria es una tierra que no ofrece grandiosidades, pero sí una belleza humilde y auténtica, que se revela a quienes se atreven a recorrer sus caminos.
                             </li>
                             
                         </ul>
@@ -303,13 +303,13 @@
                 <div class="row row-cols-1 row-cols-lg-4">
                     <div class="col col-lg-4">
                         <div class="d-flex flex-column text-center p-4 gap-3">
-                            <h2 class="font-1 fw-bold accent-color">167 km</h2>
+                            <h2 class="font-1 fw-bold accent-color">175 km</h2>
                             <span class="font-1 fs-4 fw-bold text-gray">Distancia Total</span>
                         </div>
                     </div>
                     <div class="col col-lg-4">
                         <div class="d-flex flex-column text-center p-4 gap-3">
-                            <h2 class="font-1 fw-bold accent-color">2500 m</h2>
+                            <h2 class="font-1 fw-bold accent-color">3000 m</h2>
                             <span class="font-1 fs-4 fw-bold text-gray">Desnivel positivo</span>
                         </div>
                     </div>
