Updating Recorrido with map

--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
                                 </strong> 
                                 <br>Finalmente, tras 175 km de aventura, los ciclistas regresan a Trillo, cerrando el círculo de este viaje literario y deportivo. Como Cela, habrán descubierto que la Alcarria es una tierra que no ofrece grandiosidades, pero sí una belleza humilde y auténtica, que se revela a quienes se atreven a recorrer sus caminos.
                             </li>
-                            
                         </ul>
+                        <iframe src="https://www.google.com/maps/d/embed?mid=1fN8ZZs8lYbtucx-W3o3REtC5tDkPZMk&ehbc=2E312F&10" width="100%" height="480"></iframe>
                     </div>
                 </div>
                 </div>
