--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <a class="nav-link" aria-current="page" href="#reglamento">Reglamento</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link accent-color" style="text-decoration: underline" target="_blank" aria-current="page" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRÍBETE AQUÍ</a>
+                                <a class="nav-link accent-color" style="text-decoration: underline" target="_blank" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">INSCRÍBETE AQUÍ</a>
                             </li>
                         </ul>
                     </div>
@@ -100,7 +100,11 @@
                             GRAVEL TOUR ALCARRIA
                         </h1>
                         <h2 class="font-1 accent-color">26 de Octubre 2024</h2>
-                        <i class="font-2 fs-4">Gravel Tour Alcarria no es solo una ruta ciclista, sino una experiencia única que une deporte, literatura y cultura.</i>
+                        <p><i class="font-2 fs-4">Gravel Tour Alcarria no es solo una ruta ciclista, sino una experiencia única que une deporte, literatura y cultura.</i></p>
+                        
+                        <a class="btn btn-danger" target="_blank" href="https://multiaventurabuendia.es/actividades/detalle/gravel-tour-alcarria">Inscríbete ahora</a>
+                        <p class="caption-text font-2">Límite de inscripciones 80 participantes</p>
+                        <p class="caption-text font-2">Fecha límite de inscripción 24.10.2024</p>
                     </div>
                 </div>
             </div>
