--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                         <strong class="font-1 fs-4 accent-color">Viernes 25 de Octubre 2024</strong>
                         <ul class="path">
                             <li><i class="fa-solid fa-location-dot"></i> <strong>17:00 a 20:00</strong> <br>Recogida de material y acreditaciones en el Complejo Rural El Colvillo.</li>
+                            <li><i class="fa-solid fa-location-dot"></i> <strong>19:00 a 20:00</strong> <br>Briefing tanto presencial como online para los que no puedan asistir.</li>
                             <li><i class="fa-solid fa-location-dot"></i> <strong>20:00 a 21:30 </strong> <br>Cena de confraternización en el restaurante del complejo.</li>
                         </ul>
                     </div>
@@ -223,7 +224,7 @@
                         <strong class="font-1 fs-4 accent-color">Sábado 26 de Octubre 2024</strong>
 
                         <ul class="path">
-                            <li><i class="fa-solid fa-location-dot"></i> <strong>7:00 a 8:00</strong> <br>Salida desde Trillo y recogida de material y acreditaciones.</li>
+                            <li><i class="fa-solid fa-location-dot"></i> <strong>6:00 a 8:00</strong> <br>Salida desde Trillo y recogida de material y acreditaciones.</li>
                             <li><i class="fa-solid fa-location-dot"></i> <strong>10:30 </strong> <br>Apertura de punto de asistencia Intermedio</li>
                             <li><i class="fa-solid fa-location-dot"></i> <strong>14:30  </strong> <br>Cierre de punto de asistencia intermedio</li>
                             <li><i class="fa-solid fa-location-dot"></i> <strong>19:30 </strong> <br>Cierre Gravel Tour Alcarria</li>
@@ -245,6 +246,7 @@
                         <div class="divider accent-color">
                             <i class="fa-solid fa-circle-chevron-down"></i>
                         </div>
+                        
                         <ul class="path">
                             <li><i class="fa-solid fa-location-dot accent-color-2"></i> <strong class="accent-color-2">1. Salida en Trillo: El inicio del Viaje
                             </strong> <br>El recorrido comienza en Trillo, un pequeño y pintoresco pueblo bañado por las aguas del río Tajo. Aquí, Cela pasó una de sus primeras noches en su viaje, maravillado por el sonido del agua y la tranquilidad del lugar. Desde Trillo, los ciclistas emprenderán su propio "viaje", dejando atrás el murmullo del río y adentrándose en los caminos de grava que conectan las tierras alcarreñas.
@@ -274,6 +276,8 @@
                                 <br>Finalmente, tras 175 km de aventura, los ciclistas regresan a Trillo, cerrando el círculo de este viaje literario y deportivo. Como Cela, habrán descubierto que la Alcarria es una tierra que no ofrece grandiosidades, pero sí una belleza humilde y auténtica, que se revela a quienes se atreven a recorrer sus caminos.
                             </li>
                         </ul>
+                        <p class="accent-color fw-bold">El track de la ruta y los puntos de sellado se entregará 24 horas antes del día del evento.</p>
+                        <p class="accent-color fw-bold">Los avituallamientos gastronómicos estarán ubicados en los municipios de Trillo, Sacedón, Brihuega y Cifuentes.</p>
                         <iframe src="https://www.google.com/maps/d/embed?mid=1fN8ZZs8lYbtucx-W3o3REtC5tDkPZMk&ehbc=2E312F&10" width="100%" height="480"></iframe>
                     </div>
                 </div>
@@ -319,8 +323,8 @@
                     </div>
                     <div class="col col-lg-4">
                         <div class="d-flex flex-column text-center p-4 gap-3">
-                            <h2 class="font-1 fw-bold accent-color">12 horas</h2>
-                            <span class="font-1 fs-4 fw-bold text-gray">Tiempo máximo de prueba</span>
+                            <h2 class="font-1 fw-bold accent-color">14 horas</h2>
+                            <span class="font-1 fs-4 fw-bold text-gray">Tiempo máximo de recorrido</span>
                         </div>
                     </div>
                 </div>
@@ -377,9 +381,9 @@
                         <li><b>Prioriza tu seguridad</b><br>Cumple con las normas de tránsito en todo momento. Usar casco es obligatorio, al igual que las luces delanteras y traseras en horas de poca luz . Recomendamos usar un timbre para advertir a otros con delicadeza. También es aconsejable usar ropa con colores llamativos o reflectantes para que siempre seas visible.</li>
                         <li><b>Independencia</b><br>Eres responsable de ti mismo. La organización te dará el recorrido y los puntos de sellado y de asistencia a mitad de camino para descansar y reponer fuerzas. Si tu bicicleta tiene algún problema, serás quien deba resolverlo o buscar la ayuda de otro participante.</li>
                         <li><b>Paradas estratégicas</b><br>Organiza tu tiempo como mejor te convenga.</li>
-                        <li><b>Equipamiento necesario</b><br>Es obligatorio portar un dispositivo móvil y un documento de identificación (DNI o pasaporte) junto con efectivo o una tarjeta. Además, debes llevar un chaleco reflectante, un silbato y una manta térmica por tu seguridad. Está prohibido el uso de vehículos de apoyo externos. Respeta el entorno y tu seguridad.</li>
+                        <li><b>Equipamiento necesario</b><br>Es obligatorio portar un dispositivo móvil y un documento de identificación (DNI o pasaporte) junto con efectivo o una tarjeta. Además, debes llevar un chaleco reflectante, un silbato, luces delanteras y traseras, GPS o similar con el track y una manta térmica por tu seguridad. Está prohibido el uso de vehículos de apoyo externos. Respeta el entorno y tu seguridad.</li>
                         <li><b>Seguir el camino</b><br>Todos recibirán el track del recorrido, que está diseñado para gravel y mountain bike. Eres libre de elegir tu bici, pero el track debe seguirse sin desviarse. Si te sales del recorrido, deberás regresar al punto donde te desviaste.</li>
-                        <li><b>Vive la experiencia</b><br>El recorrido y el límite de 12 horas son las únicas reglas inamovibles. El tiempo restante es tuyo para disfrutar del trayecto. Aquí no hay competidores, solo viajeros que buscan completar la aventura y aprovechar al máximo el viaje.</li>
+                        <li><b>Vive la experiencia</b><br>El recorrido y el límite de 14 horas son las únicas reglas inamovibles. El tiempo restante es tuyo para disfrutar del trayecto. Aquí no hay competidores, solo viajeros que buscan completar la aventura y aprovechar al máximo el viaje.</li>
                         <li><b>Retiro del evento</b><br>Si decides abandonar, debes hacerlo por tus propios medios hasta el final del trayecto. Si solicitas transporte por parte de la organización debido a un fallo físico o mecánico, se te aplicará un cargo de  25 euros.</li>
                         <li><b>Cobertura de seguro</b><br>Tu inscripción incluye un seguro de viaje que cubrirá cualquier incidente a lo largo del recorrido.</li>
                         <li><b>Asistencia y logística</b><br>La organización proveerá tres puntos de asistencia: uno al inicio y final, y otro en el punto medio.</li>
