--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
           <div class="d-flex flex-column gap-3 text-white">
             <div class="row row-cols-1 row-cols-lg-2">
               <div class="col col-lg-5">
-                <div class="p-3">
+                <div class="pb-4">
                   <iframe
-                    style="width: 100%"
+                    style="width: 100%; margin-top: 0"
                     height="315"
                     src="https://www.youtube.com/embed/_3Pc-QZmJQo?si=b30OU0l5HiqcY-dw"
                     title="YouTube video player"
